fix safari img stretching

--- a/src/components/Viewer/ContentBody/Block/Image/Image.module.css
+++ b/src/components/Viewer/ContentBody/Block/Image/Image.module.css
@@ -9,6 +9,8 @@
 .Image img {
   max-height: 75vh;
   max-width: 100%;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
